1. jquery-ui, throbber and scrollTo inclusions 2. updates to the stylesheet for sortable columns 3. templates updates include search templates and sorting columns

--- a/assets/build.xml
+++ b/assets/build.xml
@@ -8,6 +8,9 @@
             <fileset file="js/backbone-relational.js" />
             <fileset file="js/backbone-tastypie.js" />
             <fileset file="js/paginated_collection.js" />
+            <fileset file="js/jquery-ui.js" />
+            <fileset file="js/ui.throbber.js" />
+            <fileset file="js/jquery.scrollTo.js" />
         </concat>
     </target>
     <target name="compress" depends="concatenate" description="compress application.js to application-min.js">
