--- a/build.xml
+++ b/build.xml
@@ -1,31 +1,31 @@
 <project>
-    <target name="concatenate" description="concatenate all js files">
-        <concat destfile="js/application.js">
-            <fileset file="js/jquery-1.6.2.js" />
-            <fileset file="js/dropmenu.js" />
-            <fileset file="js/underscore.js" />
-            <fileset file="js/backbone.js" />
-            <fileset file="js/backbone-relational.js" />
-            <fileset file="js/backbone-tastypie.js" />
-            <fileset file="js/paginated_collection.js" />
-            <fileset file="js/jquery-ui-1.8.15.custom.js" />
-            <fileset file="js/jquery.ui.core.js" />
-            <fileset file="js/jquery.ui.widget.js" />
-            <fileset file="js/jquery.ui.autocomplete.js" />
-            <fileset file="js/jquery.ui.datepicker.js" />
-            <fileset file="js/jquery.ui.throbber.js" />
-            <fileset file="js/jquery.scrollTo.js" />
-            <fileset file="js/custom.js" />
+    <target name="js_concatenate" description="concatenate all js files">
+        <concat destfile="assets/js/application.js">
+            <fileset file="assets/js/jquery-1.6.2.js" />
+            <fileset file="assets/js/dropmenu.js" />
+            <fileset file="assets/js/underscore.js" />
+            <fileset file="assets/js/backbone.js" />
+            <fileset file="assets/js/backbone-relational.js" />
+            <fileset file="assets/js/backbone-tastypie.js" />
+            <fileset file="assets/js/paginated_collection.js" />
+            <fileset file="assets/js/jquery-ui-1.8.15.custom.js" />
+            <fileset file="assets/js/jquery.ui.core.js" />
+            <fileset file="assets/js/jquery.ui.widget.js" />
+            <fileset file="assets/js/jquery.ui.autocomplete.js" />
+            <fileset file="assets/js/jquery.ui.datepicker.js" />
+            <fileset file="assets/js/jquery.ui.throbber.js" />
+            <fileset file="assets/js/jquery.scrollTo.js" />
+            <fileset file="assets/js/custom.js" />
         </concat>
     </target>
-    <target name="compress" depends="concatenate" description="compress application.js to application-min.js">
+    <target name="js_compress" depends="js_concatenate" description="compress application.js to application-min.js">
         <apply executable="java" parallel="false">
-            <fileset file="js/application.js" />
+            <fileset file="assets/js/application.js" />
             <arg line="-jar" />
-            <arg path="../../../bin/yuicompressor-2.4.2.jar" />
+            <arg path="../../bin/yuicompressor-2.4.2.jar" />
             <srcfile />
             <arg line="-o" />
-            <mapper type="glob" from="*.js" to="js/*-min.js" />
+            <mapper type="glob" from="*.js" to="assets/js/*-min.js" />
             <targetfile />
         </apply>
     </target>
