--- a/build.xml
+++ b/build.xml
@@ -15,6 +15,7 @@
             <fileset file="assets/js/jquery.ui.datepicker.js" />
             <fileset file="assets/js/jquery.ui.throbber.js" />
             <fileset file="assets/js/jquery.scrollTo.js" />
+            <fileset file="assets/js/facebox.js" />
             <fileset file="assets/js/custom.js" />
         </concat>
     </target>
