--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,17 @@
-Django==1.2.5
-MySQL-python>=1.2.2
-nose==0.11.4
-django-nose==0.1.2
-djappsettings==0.1.0
--e git://github.com/timbaobjects/djtables.git@a1261db0961b724ef79f4d6f71a484bbcc02bedd#egg=djtables
--e git://github.com/timbaobjects/rapidsms.git@d7f4bc15db6347bec0eaf67b9e595f228713d1cb#egg=RapidSMS
+Django==1.4.1
+psycopg2==2.4.5
+RapidSMS==0.9.6a
 django-audit-log==0.2.1
 django-filter==0.5.3
 django-extensions==0.5
-South==0.7.2
-numpy==1.5.1
--e git://github.com/timbaobjects/django-tastypie.git@c52d293950df16290606f9cf4f84e8e3fa2de5bd#egg=django_tastypie-dev
-django-mako==0.1.5pre
--e git://github.com/django-mptt/django-mptt.git@2d664c26493d3791b4c3f205da30a18326ab7dc9#egg=django_mptt-dev
-django-celery==2.2.7
-xlrd==0.7.1
-xlutils==1.4.1
-xlwt==0.7.2
-redis==2.4.9
-django-reversion==1.3.3
+South>=0.7.2
+numpy>=1.5.1
+django-mako
+django-mptt==0.5.4
+django-celery
+xlrd
+xlutils
+xlwt
+django-reversion
+librabbitmq==0.9.9
+rapidsms-threadless-router
