--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ RapidSMS==0.9.6a
 django-audit-log==0.2.1
 django-filter==0.5.3
 django-extensions==0.5
+djangorestframework==0.4.0
 South>=0.7.2
 numpy>=1.5.1
 django-mako
