switching back to django-tastypie from django-rest-framework

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
 Django==1.4.1
-psycopg2==2.4.5
 RapidSMS==0.9.6a
-django-audit-log==0.2.1
-django-filter==0.5.3
-django-extensions==0.5
-djangorestframework==0.4.0
 South>=0.7.2
-numpy>=1.5.1
+django-audit-log==0.2.1
+django-celery
+django-extensions==0.5
+django-filter==0.5.3
 django-mako
 django-mptt==0.5.4
-django-celery
+django-reversion
+django-tastypie==0.9.11
+librabbitmq==0.9.9
+numpy>=1.5.1
+psycopg2==2.4.5
+rapidsms-threadless-router
 xlrd
 xlutils
 xlwt
-django-reversion
-librabbitmq==0.9.9
-rapidsms-threadless-router
