messagelog beginnings, switch to threadless router updated package versions

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
 Django==1.4.1
 RapidSMS==0.9.6a
-South>=0.7.2
+South==0.7.2
 django-audit-log==0.2.1
-django-celery
+django-celery==3.0.9
 django-extensions==0.5
 django-filter==0.5.3
-django-mako
+django-mako==0.1.5pre
 django-mptt==0.5.4
-django-reversion
+django-reversion==1.6.3
 django-tastypie==0.9.11
 librabbitmq==0.9.9
-numpy>=1.5.1
+numpy==1.6.1
 psycopg2==2.4.5
-rapidsms-threadless-router
-xlrd
-xlutils
-xlwt
+rapidsms-threadless-router=0.1.4
+xlrd==0.8.0
+xlutils==1.5.2
+xlwt==0.74
