--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,8 @@ librabbitmq==0.9.9
 numpy==1.6.1
 psycopg2==2.4.5
 rapidsms-threadless-router=0.1.4
+tablib=0.9.11
 xlrd==0.8.0
 xlutils==1.5.2
 xlwt==0.74
-WebTest==1.4.0
-django-webtest==1.5.4
+
