update to SMS parsing logic to support new method of storing form schema and form submissions.

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,9 +12,8 @@ django-tastypie==0.9.11
 librabbitmq==0.9.9
 numpy==1.6.1
 psycopg2==2.4.5
-rapidsms-threadless-router=0.1.4
-tablib=0.9.11
+rapidsms-threadless-router==0.1.4
+tablib==0.9.11
 xlrd==0.8.0
 xlutils==1.5.2
 xlwt==0.74
-
