Refactored form generator to use django-form-utils' BetterForm, and added requirement

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-audit-log==0.2.1
 django-celery==3.0.9
 django-extensions==0.5
 django-filter==0.5.3
+django-form-utils==0.2.0
 django-mako==0.1.5pre
 django-mptt==0.5.4
 django-reversion==1.6.3
