--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ RapidSMS==0.9.6a
 South==0.7.2
 django-audit-log==0.2.1
 django-celery==3.0.9
+django-directed-acyclic-graph==0.3
 django-extensions==0.5
 django-filter==0.5.3
 django-form-utils==0.2.0
