--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+-e git+https://github.com/alex/django-filter.git@ae3e111d7a9cfef8c9cbf9a7274db2735fbab415#egg=django_filter-dev
 Django==1.4.1
 RapidSMS==0.9.6a
 South==0.7.2
@@ -6,7 +7,6 @@ django-bootstrap-pagination==0.1.10
 django-celery==3.0.9
 django-directed-acyclic-graph==0.3
 django-extensions==0.5
-django-filter==0.5.3
 django-form-utils==0.2.0
 django-mako==0.1.5pre
 django-mptt==0.5.4
