graph operations for locations in data analyses

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ django-orm-extensions==3.0b3
 django-reversion==1.6.3
 django-tastypie==0.9.11
 librabbitmq==0.9.9
+networkx==1.7
 numpy==1.6.1
 psycopg2==2.4.5
 rapidsms-threadless-router==0.1.4
