--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
+#
+# NOTE: install numpy before using this. pandas depends on numpy, but
+#       doesn't install it. if numpy is not already installed, installing
+#       pandas *WILL* fail
+#
 -e git+https://github.com/alex/django-filter.git@ae3e111d7a9cfef8c9cbf9a7274db2735fbab415#egg=django_filter-dev
-Django==1.4.1
-RapidSMS==0.9.6a
-South==0.7.2
+Django==1.4.3
+RapidSMS==0.11.0
+South==0.7.6
 django-audit-log==0.2.1
 django-bootstrap-pagination==0.1.10
 django-celery==3.0.9
@@ -10,12 +15,12 @@ django-extensions==0.5
 django-form-utils==0.2.0
 django-mako==0.1.5pre
 django-orm-extensions==3.0b3
-django-reversion==1.6.3
+django-reversion==1.6.5
 django-tastypie==0.9.11
-librabbitmq==0.9.9
+librabbitmq==1.0.1
 networkx==1.7
-numpy==1.6.1
-pandas==0.9.1
+numpy==1.6.2
+pandas==0.10.1
 psycopg2==2.4.5
 rapidsms-threadless-router==0.1.4
 tablib==0.9.11
