--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ librabbitmq==1.0.1
 networkx==1.7
 numpy==1.6.2
 pandas==0.10.1
+python-magic==0.4.3
 python-memcached==1.48
 psycopg2==2.4.6
 tablib==0.9.11
