refactored buildout.cfg and updated requirements.txt
1. Removed Djang from rquirements since it's already been installed by
the buildout djangorecipe recipe.
2. Changed django-filter to use the pypi version
3. Switched from using the pypi version of pandas to a custom built one

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,22 +1,26 @@
 [buildout]
-include-site-packages = false
-extensions = mr.developer
-auto-checkout = *
+develop = 
+    .
+    gp.recipe.pip
 versions = versions
 parts =
+    pip
     django
+eggs = 
 
 [versions]
 Django = 1.4.3
-
-[sources]
-django-filter = git https://github.com/alex/django-filter.git rev=ae3e111d7a9cfef8c9cbf9a7274db2735fbab415
 
 [logs]
 access_log = ${buildout:directory}/log/access.log
 error_log = ${buildout:directory}/log/error.log
 
-# Site Configurations
+[pip]
+recipe = gp.recipe.pip
+virtualenv = ${buildout:directory} 
+install =
+    -r requirements.txt
+
 [django]
 recipe = djangorecipe
 projectegg = apollo
@@ -27,7 +31,7 @@ test =
 settings = settings
 control-script = apollo
 extra-paths = ${buildout:directory}/src/apollo/
-#eggs = ${buildout:eggs}
+eggs = ${buildout:eggs}
 
 # Add to parts if you want to use fabric
 [fabric-script]
