added the src directory to the extra-paths so python can find the apollo project directory

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -30,7 +30,9 @@ test =
     messagelog
 settings = settings
 control-script = apollo
-extra-paths = ${buildout:directory}/src/apollo/
+extra-paths = 
+    ${buildout:directory}/src/
+    ${buildout:directory}/src/apollo/
 eggs = ${buildout:eggs}
 
 # Add to parts if you want to use fabric
