--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,6 +6,7 @@ versions = versions
 parts =
     pip
     django
+    node.js
 eggs = 
 
 [versions]
@@ -34,6 +35,12 @@ extra-paths =
     ${buildout:directory}/src/
     ${buildout:directory}/src/apollo/
 eggs = ${buildout:eggs}
+
+[node.js]
+recipe = gp.recipe.node
+url = http://nodejs.org/dist/v0.8.18/node-v0.8.18.tar.gz
+scripts =
+    node
 
 # Add to parts if you want to use fabric
 [fabric-script]
