--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ http://www.timbaobjects.com/eggs/pandas-0.10.1.tar.gz
 python-magic==0.4.3
 python-memcached==1.48
 psycopg2==2.4.6
+git+https://github.com/timbaobjects/rapidsms-telerivet.git#egg=rapidsms-telerivet
 tablib==0.9.11
 xlrd==0.8.0
 xlutils==1.5.2
