--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@
 #       pandas *WILL* fail
 #
 django-filter==0.5.4
-RapidSMS==0.11.0
 South==0.7.6
 django-audit-log==0.2.1
 django-bootstrap-pagination==0.1.10
@@ -26,6 +25,7 @@ python-magic==0.4.3
 python-memcached==1.48
 psycopg2==2.4.6
 git+https://github.com/timbaobjects/rapidsms-telerivet.git#egg=rapidsms-telerivet
+git+https://github.com/rapidsms/rapidsms.git@feature/bulk-messaging-api#egg=rapidsms
 tablib==0.9.11
 xlrd==0.8.0
 xlutils==1.5.2
