fixed a bug in filtering critical incidents locations

--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ python-memcached==1.48
 psycopg2==2.4.6
 git+https://github.com/timbaobjects/rapidsms-telerivet.git#egg=rapidsms-telerivet
 git+https://github.com/rapidsms/rapidsms.git@feature/bulk-messaging-api#egg=rapidsms
--e git+https://github.com/timbaobjects/django-jimmypage.git@1f903e7a30cc266a91823a8b6f7f72e7c638532e#egg=django_jimmypage-dev
+git+https://github.com/timbaobjects/django-jimmypage.git#egg=django_jimmypage-dev
 tablib==0.9.11
 xlrd==0.8.0
 xlutils==1.5.2
