added tabimport for file imports and upgraded xlrd and xlwt

--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,29 @@
-*.sublime-workspace
-*.sublime-project
-*.sqlite3
-*.pyc
-rapidsms.log*
-schema.png
-local_settings.py
-*.swp
-nbproject
-.DS_Store
+*.ipynb
 *.log
+*.pyc
+*.sqlite3
+*.sublime-project
+*.sublime-workspace
+*.swp
+.DS_Store
+.Python
 .env
-assets/
 .installed.cfg
 .mr.developer.cfg
+assets/
 bin/
-eggs/
-parts/
+build/
 develop-eggs/
+eggs/
+gp.recipe.pip/gp.recipe.pip.egg-info/
 include/
 lib/
+local_settings.py
 man/
-share/
-build/
-src/apollo.egg-info/
-.Python
+nbproject
+parts/
 pip-log.txt
-gp.recipe.pip/gp.recipe.pip.egg-info/
+rapidsms.log*
+schema.png
+share/
+src/apollo.egg-info/
