--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ djorm-ext-expressions==0.4.2
 djorm-ext-hstore==0.4.2
 johnny-cache==1.4
 librabbitmq==1.0.1
+lxml==3.2.1
 networkx==1.7
 numpy==1.6.2
 http://www.timbaobjects.com/eggs/pandas-0.10.1.tar.gz
@@ -31,5 +32,6 @@ git+https://github.com/timbaobjects/rapidsms-telerivet.git#egg=rapidsms-telerive
 git+https://github.com/rapidsms/rapidsms.git@feature/bulk-messaging-api#egg=rapidsms
 git+https://github.com/timbaobjects/django-jimmypage.git#egg=django_jimmypage-dev
 tablib==0.9.11
+Unidecode==0.04.12
 xlrd==0.9.2
 xlwt==0.7.5
