--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ psycopg2==2.4.6
 git+https://github.com/timbaobjects/rapidsms-telerivet.git#egg=rapidsms-telerivet
 rapidsms==0.13.0
 git+https://github.com/timbaobjects/django-jimmypage.git#egg=django_jimmypage-dev
+git+https://github.com/ecometrica/django-vinaigrette.git
 tablib==0.9.11
 Unidecode==0.04.12
 xlrd==0.9.2
