--- a/requirements.txt
+++ b/requirements.txt
@@ -9,15 +9,19 @@ django-audit-log==0.2.1
 django-bootstrap-pagination==0.1.10
 django-celery==3.0.11
 django-directed-acyclic-graph==0.3
+django-dotenv==1.2
 django-extensions==0.5
 django-form-utils==0.2.0
 django-guardian==1.1.0.beta
 django-mako==0.1.5pre
 django-reversion==1.6.5
 django-tastypie==0.9.11
+dj-database-url==0.2.2
 djorm-ext-core==0.4.2
 djorm-ext-expressions==0.4.4
 djorm-ext-hstore==0.4.3
+Fabric==1.7.0
+honcho==0.4.2
 johnny-cache==1.4
 librabbitmq==1.0.1
 lxml==3.2.1
@@ -34,5 +38,6 @@ rapidsms==0.13.0
 git+https://github.com/timbaobjects/django-jimmypage.git#egg=django_jimmypage-dev
 git+https://github.com/ecometrica/django-vinaigrette.git
 tablib==0.9.11
+uWSGI==1.9.16
 xlrd==0.9.2
 xlwt==0.7.5
