--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,8 +4,11 @@ develop =
     gp.recipe.pip
 versions = versions
 parts =
+    mkdir
     pip
     django
+    fabric
+    procfile
 eggs = 
 
 [versions]
@@ -35,11 +38,21 @@ extra-paths =
     ${buildout:directory}/src/apollo/
 eggs = ${buildout:eggs}
 
-# Add to parts if you want to use fabric
-[fabric-script]
+[env]
+recipe = gocept.recipe.env
+
+[mkdir]
+recipe = z3c.recipe.mkdir
+paths = var/log
+
+[fabric]
 recipe = collective.recipe.template
 input = templates/fabtemplate.py
+staging-root = deploy/staging
+production-root = deploy/production
 output = ${buildout:directory}/fabfile.py
-staging-root =
-production-root =
 
+[procfile]
+recipe = collective.recipe.template
+input = templates/Procfile
+output = ${buildout:directory}/Procfile
