renamed the input Procfile template so it doesn't get ignored

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -54,5 +54,5 @@ output = ${buildout:directory}/fabfile.py
 
 [procfile]
 recipe = collective.recipe.template
-input = templates/Procfile
+input = templates/Procfile.in
 output = ${buildout:directory}/Procfile
