added rabbitmq configuration options and modified directory settings for static content

--- a/production.cfg
+++ b/production.cfg
@@ -9,7 +9,7 @@ username = ${env:FABRIC_USER}
 # NginX options
 server_name = ${env:APOLLO_SERVER_NAME}
 media_dir = ${buildout:directory}/media/
-static_dir = ${buildout:directory}/assets/
+static_dir = ${buildout:directory}
 access_log = ${buildout:directory}/var/log/${opts:control-script}-access.log
 error_log = ${buildout:directory}/var/log/${opts:control-script}-error.log
 # uWSGI options
