--- a/requirements.txt
+++ b/requirements.txt
@@ -15,27 +15,27 @@ django-guardian==1.1.0.beta
 django-reversion==1.6.5
 django-tastypie==0.9.11
 dj-database-url==0.2.2
-djorm-ext-core==0.4.2
-djorm-ext-expressions==0.4.4
-djorm-ext-hstore==0.4.3
-Fabric==1.7.0
+djorm-ext-core==0.4.3
+djorm-ext-expressions==0.5
+djorm-ext-hstore==0.5
+Fabric==1.8.0
 honcho==0.4.2
 johnny-cache==1.4
 librabbitmq==1.0.1
-lxml==3.2.1
-networkx==1.7
-numpy==1.6.2
-http://www.timbaobjects.com/eggs/pandas-0.10.1.tar.gz
+lxml==3.2.3
+networkx==1.8.1
+numpy==1.7.1
+pandas==0.12.0
 parsimonious==0.4
 python-magic==0.4.3
 python-memcached==1.48
 pytz==2013b
 psycopg2==2.4.6
 git+https://github.com/timbaobjects/rapidsms-telerivet.git#egg=rapidsms-telerivet
-rapidsms==0.13.0
+RapidSMS==0.15.0
 git+https://github.com/timbaobjects/django-jimmypage.git#egg=django_jimmypage-dev
 git+https://github.com/ecometrica/django-vinaigrette.git
 tablib==0.9.11
-uWSGI==1.9.16
+uWSGI==1.9.17.1
 xlrd==0.9.2
 xlwt==0.7.5
