also specify the listen port for nginx

--- a/templates/nginx.conf
+++ b/templates/nginx.conf
@@ -1,4 +1,5 @@
 server {
+    listen  80;
     server_name ${opts:server_name};
     access_log  ${opts:access_log};
     error_log   ${opts:error_log};
