--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ RapidSMS==0.15.0
 git+https://github.com/timbaobjects/django-jimmypage.git#egg=django_jimmypage-dev
 git+https://github.com/ecometrica/django-vinaigrette.git
 tablib==0.9.11
+transifex-client==0.9.1
 uWSGI==1.9.17.1
 xlrd==0.9.2
 xlwt==0.7.5
