--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,8 @@ django-dotenv==1.2
 django-extensions==0.5
 django-form-utils==0.2.0
 django-guardian==1.1.0.beta
+django-htmlmin==0.6.2
+django-pipeline==1.3.15
 django-reversion==1.6.5
 django-tastypie==0.9.11
 dj-database-url==0.2.2
