fixed bug preventing the compression of eligible assets by nginx

--- a/templates/nginx.conf
+++ b/templates/nginx.conf
@@ -26,12 +26,11 @@ server {
 
     location ^~ /assets/ {
         root ${opts:static_dir};
-        if ($request_uri ~* "\.(ico|css|js|gif|jpe?g|png)\?[0-9]+$") {
+        expires 31d;
+        if ($request_uri ~* \.(ico|css|js|gif|jpe?g|png)$) {
             access_log off;
             expires max;
-            break;
         }
-        expires 31d;
     }
 
     location / {
