--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ django-extensions==0.5
 django-form-utils==0.2.0
 django-guardian==1.1.0.beta
 django-pipeline==1.3.15
+django-readonly-site==0.1.2
 django-reversion==1.6.5
 django-tastypie==0.9.11
 dj-database-url==0.2.2
