--- a/templates/Procfile.in
+++ b/templates/Procfile.in
@@ -1,2 +1,2 @@
-web: bin/uwsgi --ini ${buildout:parts-directory}/uwsgi/${django:control-script}.ini
-worker: bin/apollo celeryd -lINFO
+web: ${buildout:bin-directory}/uwsgi --ini ${buildout:parts-directory}/uwsgi/${django:control-script}.ini
+worker: ${buildout:bin-directory}/apollo celeryd -lINFO
