--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ git+https://github.com/timbaobjects/django-jimmypage.git#egg=django_jimmypage-de
 git+https://github.com/ecometrica/django-vinaigrette.git
 tablib==0.9.11
 transifex-client==0.9.1
+Unidecode==0.04.14
 uWSGI==1.9.17.1
 xlrd==0.9.2
 xlwt==0.7.5
