enable proxy caching of static resources

--- a/templates/nginx.conf
+++ b/templates/nginx.conf
@@ -30,6 +30,7 @@ server {
         if ($request_uri ~* \.(ico|css|js|gif|jpe?g|png)$) {
             access_log off;
             expires max;
+            add_header Cache-Control public;
         }
     }
 
