--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,9 @@
-#
-# NOTE: install numpy before using this. pandas depends on numpy, but
-#       doesn't install it. if numpy is not already installed, installing
-#       pandas *WILL* fail
-#
-django-filter==0.5.4
-South==0.7.6
-django-bootstrap-pagination==0.1.10
-django-celery==3.0.11
-django-directed-acyclic-graph==0.3
-django-dotenv==1.2
-django-extensions==0.5
-django-form-utils==0.2.0
-django-guardian==1.1.0.beta
-django-pipeline==1.3.15
-django-readonly-site==0.1.2
-django-reversion==1.7.1
-django-tastypie==0.9.11
-dj-database-url==0.2.2
-djorm-ext-core==0.4.3
-djorm-ext-expressions==0.5
-djorm-ext-hstore==0.5
-Fabric==1.8.0
-honcho==0.4.2
-johnny-cache==1.4
-librabbitmq==1.0.1
-lxml==3.2.3
-networkx==1.8.1
-numpy==1.7.1
-pandas==0.12.0
-parsimonious==0.4
-python-magic==0.4.3
-python-memcached==1.48
-pytz==2013b
-psycopg2==2.4.6
-git+https://github.com/timbaobjects/rapidsms-telerivet.git#egg=rapidsms-telerivet
-raven==3.5.0
-RapidSMS==0.15.0
-git+https://github.com/timbaobjects/django-jimmypage.git#egg=django_jimmypage-dev
-git+https://github.com/ecometrica/django-vinaigrette.git
-tablib==0.9.11
-transifex-client==0.9.1
-Unidecode==0.04.14
-uWSGI==1.9.17.1
-xlrd==0.9.2
-xlwt==0.7.5
+Django==1.6.2
+gevent==1.0
+greenlet==0.4.2
+honcho==0.5.0
+mongoengine==0.8.7
+nose==1.3.0
+pymongo==2.6.3
+uWSGI==2.0.1
+wsgiref==0.1.2
