--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,9 @@ nose==1.3.0
 pymongo==2.6.3
 uWSGI==2.0.1
 wsgiref==0.1.2
+awesome-slugify==1.2.1
+django-dotenv==1.2
+Unidecode==0.04.14
+python-dateutil==2.2
+numpy==1.8.0
+pandas==0.13.1
