--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,11 @@
-Django==1.6.2
-Unidecode==0.04.14
 awesome-slugify==1.2.1
-django-form-utils==1.0.1
-django-pipeline==1.3.22
-futures==2.1.6
-gevent==1.0
-greenlet==0.4.2
+Flask-Assets==0.9
+flask-mongoengine==0.7.0
+Flask-Security==1.7.1
+Flask-WTF==0.9.4
+Flask==0.10.1
 honcho==0.5.0
-mongoengine==0.8.7
 nose==1.3.0
-numpy==1.8.0
 pandas==0.13.1
-pymongo==2.6.3
-python-dateutil==2.2
-pytz==2013.9
-six==1.5.2
 uWSGI==2.0.1
-wsgiref==0.1.2
+WTForms==1.0.5
