--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,29 @@
-awesome-slugify==1.2.1
+Flask==0.10.1
 Flask-Assets==0.9
-flask-mongoengine==0.7.0
+Flask-Login==0.2.10
+Flask-Mail==0.9.0
+Flask-Principal==0.4.0
 Flask-Security==1.7.1
 Flask-WTF==0.9.4
-Flask==0.10.1
-honcho==0.5.0
-nose==1.3.0
-pandas==0.13.1
-uWSGI==2.0.1
+Jinja2==2.7.2
+MarkupSafe==0.19
+Unidecode==0.04.14
 WTForms==1.0.5
+Werkzeug==0.9.4
+awesome-slugify==1.2.1
+blinker==1.3
+flask-mongoengine==0.7.0
+honcho==0.5.0
+itsdangerous==0.23
+mongoengine==0.8.7
+nose==1.3.0
+numpy==1.8.0
+pandas==0.13.1
+passlib==1.6.2
+pymongo==2.6.3
+python-dateutil==2.2
+pytz==2014.1
+six==1.6.1
+uWSGI==2.0.1
+webassets==0.9
+wsgiref==0.1.2
