--- a/apollo/application.cfg
+++ b/apollo/application.cfg
@@ -1,5 +1,15 @@
-SECRET_KEY = ';lkjasdf7*^8723oijasdjf786dfhkjanm,x987686$#'
+import os
+from urlparse import urlparse
+
+if os.environ.get('container') == 'lxc':
+    MONGO_ENV_NAME = 'MONGODB_PORT'
+else:
+    MONGO_ENV_NAME = 'MONGO_DATABASE_HOST'
+
 MONGODB_SETTINGS = {
-    'DB': 'apollo'
+    'DB': os.environ.get('MONGO_DATABASE_NAME', 'apollo'),
+    'HOST': urlparse(os.environ.get(MONGO_ENV_NAME, 'mongodb://localhost')).netloc
 }
-DEBUG = True
+
+SECRET_KEY = os.environ.get('SECRET_KEY', 'SOMETHING_SECURE')
+DEBUG = os.environ.get('DEBUG', False)
