--- a/apollo/application.cfg
+++ b/apollo/application.cfg
@@ -1,3 +1,4 @@
+# -*- coding: utf-8 -*-
 import os
 from urlparse import urlparse
 
@@ -9,6 +10,14 @@ else:
 MONGODB_SETTINGS = {
     'DB': os.environ.get('MONGO_DATABASE_NAME', 'apollo'),
     'HOST': urlparse(os.environ.get(MONGO_ENV_NAME, 'mongodb://localhost')).netloc
+}
+SECURITY_URL_PREFIX = '/accounts'
+SECURITY_LOGIN_USER_TEMPLATE = 'accounts/login_user.html'
+
+LANGUAGES = {
+    'en': 'English',
+    'es': 'Español',
+    'fr': 'Français',
 }
 
 SECRET_KEY = os.environ.get('SECRET_KEY', 'SOMETHING_SECURE')
