template refactoring and translation files

--- a/apollo/application.cfg
+++ b/apollo/application.cfg
@@ -18,6 +18,9 @@ LANGUAGES = {
     'en': 'English',
     'es': 'Español',
     'fr': 'Français',
+    'az': 'Azərbaycanca',
+    'ar': 'العربية',
+    'de': 'Deutsch',
 }
 
 SECRET_KEY = os.environ.get('SECRET_KEY', 'SOMETHING_SECURE')
