--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Flask-Script==0.6.7
 Flask-Security==1.7.1
 Flask-WTF==0.9.4
 Flask==0.10.1
+gevent==1.0
 honcho==0.5.0
 itsdangerous==0.23
 Jinja2==2.7.2
