--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 -e git+https://github.com/tiborsimko/flask-menu.git#egg=Flask-Menu
+-e git+https://github.com/ahupp/python-magic.git#egg=python-magic
 awesome-slugify==1.2.1
 Babel==1.3
 blinker==1.3
@@ -26,6 +27,7 @@ passlib==1.6.2
 pymongo==2.6.3
 python-dateutil==2.2
 pytz==2014.1
+redis==2.9.1
 six==1.6.1
 tablib==0.9.11
 Unidecode==0.04.14
@@ -34,3 +36,4 @@ webassets==0.9
 Werkzeug==0.9.4
 wsgiref==0.1.2
 WTForms==1.0.5
+xlrd==0.9.2
