text blasting tasks and worker configuration and setup using honcho

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,15 @@
+*.pyc
+*.sublime-project
+*.sublime-workspace
 .DS_Store
 .env*
 .Python
 .webassets-cache
-*.pyc
-*.sqlite3
-*.sublime-project
-*.sublime-workspace
 apollo/static/
 assets/
 bin/
-django.mo
 include/
 lib/
-man/
 messages.mo
 share/
-src/apollo.egg-info/
+src/
