--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
--e git+https://github.com/tiborsimko/flask-menu.git#egg=Flask-Menu
 -e git+https://github.com/ahupp/python-magic.git#egg=python-magic
+-e git+https://github.com/tiborsimko/flask-menu.git#egg=Flask-Menu
 awesome-slugify==1.2.1
 Babel==1.3
 blinker==1.3
-celery==3.1.9
+celery==3.1.10
 Flask-Assets==0.9
 Flask-Babel==0.9
 Flask-Login==0.2.10
@@ -28,6 +28,7 @@ pymongo==2.6.3
 python-dateutil==2.2
 pytz==2014.1
 redis==2.9.1
+requests==2.2.1
 six==1.6.1
 tablib==0.9.11
 Unidecode==0.04.14
