--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 -e git+https://github.com/ahupp/python-magic.git#egg=python-magic
 -e git+https://github.com/tiborsimko/flask-menu.git#egg=Flask-Menu
+aniso8601==0.82
 awesome-slugify==1.2.1
 Babel==1.3
 blinker==1.3
@@ -10,6 +11,7 @@ Flask-Login==0.2.10
 Flask-Mail==0.9.0
 flask-mongoengine==0.7.0
 Flask-Principal==0.4.0
+Flask-Restful==0.2.12
 Flask-Script==0.6.7
 Flask-Security==1.7.1
 Flask-WTF==0.9.4
