--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ awesome-slugify==1.2.1
 Babel==1.3
 blinker==1.3
 celery==3.1.10
+Fabric==1.8.3
 Flask-Assets==0.9
 Flask-Babel==0.9
 Flask-Login==0.2.10
