--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ celery==3.1.10
 Fabric==1.8.3
 Flask-Assets==0.9
 Flask-Babel==0.9
+Flask-Gravatar==0.4.1
 Flask-Login==0.2.10
 Flask-Mail==0.9.0
 flask-mongoengine==0.7.0
