--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ mongoengine==0.8.7
 nose==1.3.0
 numpy==1.8.0
 pandas==0.13.1
+parsimonious==0.5
 passlib==1.6.2
 pymongo==2.6.3
 python-dateutil==2.2
