--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ itsdangerous==0.23
 Jinja2==2.7.2
 MarkupSafe==0.19
 mongoengine==0.8.7
+networkx==1.8.1
 nose==1.3.0
 numpy==1.8.0
 pandas==0.13.1
