--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Babel==1.3
 blinker==1.3
 celery==3.1.10
 Fabric==1.8.3
+Flask-Admin==1.0.8
 Flask-Assets==0.9
 Flask-Babel==0.9
 Flask-Gravatar==0.4.1
