--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ Werkzeug==0.9.4
 aniso8601==0.82
 awesome-slugify==1.2.1
 blinker==1.3
+cachetools==0.4.0
 celery==3.1.10
 flask-mongoengine==0.7.0
 gevent==1.0
