--- a/.tx/config
+++ b/.tx/config
@@ -2,7 +2,7 @@
 host = https://www.transifex.com
 
 [apollo.Apollo]
-file_filter = src/apollo/locale/<lang>/LC_MESSAGES/django.po
-source_file = src/apollo/locale/en/LC_MESSAGES/django.po
+file_filter = apollo/frontend/translations/<lang>/LC_MESSAGES/messages.po
+source_file = apollo/frontend/translations/messages.pot
 source_lang = en
 
