--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Flask-Login==0.2.10
 Flask-Mail==0.9.0
 Flask-Principal==0.4.0
 Flask-Restful==0.2.12
+Flask-SSLify==0.1.4
 Flask-Script==0.6.7
 Flask-Security==1.7.1
 Flask-WTF==0.9.4
