--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Fabric==1.8.3
 Flask-Admin==1.0.8
 Flask-Assets==0.9
 Flask-Babel==0.9
+Flask-Cache==0.13.1
 Flask-Gravatar==0.4.1
 Flask-Login==0.2.10
 Flask-Mail==0.9.0
