--- a/requirements.txt
+++ b/requirements.txt
@@ -1,52 +1,71 @@
--e git+https://github.com/ahupp/python-magic.git@012f8a90501d314a694c136b73179af12b2f41e8#egg=python_magic-master
--e git+https://github.com/tiborsimko/flask-menu.git@5f5d34812e2d9bd6c49509a3c5a479b9800d9c2b#egg=Flask_Menu-master
 Babel==1.3
 Fabric==1.8.3
-Flask-Admin==1.0.9
+Flask==0.10.1
+Flask-Admin==1.1.0
 Flask-Assets==0.9
 Flask-Babel==0.9
 Flask-Cache==0.13.1
 Flask-Gravatar==0.4.1
 Flask-Login==0.2.10
 Flask-Mail==0.9.0
+-e git+https://github.com/tiborsimko/flask-menu.git@5f5d34812e2d9bd6c49509a3c5a479b9800d9c2b#egg=Flask_Menu-dev
 Flask-Principal==0.4.0
-Flask-Restful==0.2.12
+Flask-RESTful==0.2.12
 Flask-SSLify==0.1.4
 Flask-Script==0.6.7
 Flask-Security==1.7.1
 Flask-WTF==0.11
-Flask==0.10.1
 Jinja2==2.7.3
 MarkupSafe==0.23
 Parsley==1.2
+Pympler==0.3.1
 Unidecode==0.04.14
 WTForms==2.0.2
 Werkzeug==0.10.4
+amqp==1.4.6
 aniso8601==0.82
+anyjson==0.3.3
 awesome-slugify==1.2.1
+billiard==3.3.0.19
 blinker==1.3
 cachetools==0.4.0
 celery==3.1.10
+cffi==0.9.2
+cryptography==0.8.1
+ecdsa==0.11
+enum34==1.0.4
 flask-mongoengine==0.7.1
 gevent==1.0
+gnureadline==6.3.3
+greenlet==0.4.5
 honcho==0.5.0
+ipython==2.3.1
 itsdangerous==0.24
+kombu==3.0.24
 lxml==3.3.5
-mongoengine==0.8.7
+mongoengine==0.9.0
+ndg-httpsclient==0.3.3
 networkx==1.8.1
 nose==1.3.0
 numexpr==2.4
 numpy==1.8.0
 pandas==0.13.1
+paramiko==1.12.4
 parsimonious==0.5
 passlib==1.6.2
+pyOpenSSL==0.14
+pyasn1==0.1.7
+pycparser==2.10
+pycrypto==2.6.1
 pymongo==2.8
 python-dateutil==2.2
+-e git+https://github.com/ahupp/python-magic.git@012f8a90501d314a694c136b73179af12b2f41e8#egg=python_magic-master
 pytz==2014.1
 raven==4.2.3
 redis==2.9.1
 requests==2.6.0
-six==1.6.1
+six==1.9.0
+speaklater==1.3
 tablib==0.9.11
 uWSGI==2.0.1
 unicodecsv==0.9.4
