--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 -e git+https://github.com/tiborsimko/flask-menu.git@5f5d34812e2d9bd6c49509a3c5a479b9800d9c2b#egg=Flask_Menu-master
 Babel==1.3
 Fabric==1.8.3
-Flask-Admin==1.0.9
+Flask-Admin==1.1.0
 Flask-Assets==0.9
 Flask-Babel==0.9
 Flask-Cache==0.13.1
@@ -10,7 +10,7 @@ Flask-Gravatar==0.4.1
 Flask-Login==0.2.10
 Flask-Mail==0.9.0
 Flask-Principal==0.4.0
-Flask-Restful==0.2.12
+Flask-RESTful==0.2.12
 Flask-SSLify==0.1.4
 Flask-Script==0.6.7
 Flask-Security==1.7.1
@@ -22,17 +22,26 @@ Parsley==1.2
 Unidecode==0.04.14
 WTForms==2.0.2
 Werkzeug==0.10.4
+amqp==1.4.6
 aniso8601==0.82
+anyjson==0.3.3
 awesome-slugify==1.2.1
+billiard==3.3.0.19
 blinker==1.3
 cachetools==0.4.0
 celery==3.1.10
+cffi==0.9.2
+cryptography==0.8.1
+ecdsa==0.11
+enum34==1.0.4
 flask-mongoengine==0.7.1
 gevent==1.0
 honcho==0.5.0
 itsdangerous==0.24
+kombu==3.0.24
 lxml==3.3.5
-mongoengine==0.8.7
+mongoengine==0.9.0
+ndg-httpsclient==0.3.3
 networkx==1.8.1
 nose==1.3.0
 numexpr==2.4
@@ -40,6 +49,8 @@ numpy==1.8.0
 pandas==0.13.1
 parsimonious==0.5
 passlib==1.6.2
+pyasn1==0.1.7
+pyOpenSSL==0.14
 pymongo==2.8
 python-dateutil==2.2
 pytz==2014.1
