--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
--e git+https://github.com/ahupp/python-magic.git@012f8a90501d314a694c136b73179af12b2f41e8#egg=python_magic-master
--e git+https://github.com/tiborsimko/flask-menu.git@5f5d34812e2d9bd6c49509a3c5a479b9800d9c2b#egg=Flask_Menu-master
+-e git+https://github.com/ahupp/python-magic.git@a818eda7e3e163d6179f9a6a381856ffb00722ac#egg=python_magic-master
 Babel==1.3
 Fabric==1.8.3
 Flask-Admin==1.1.0
@@ -9,6 +8,7 @@ Flask-Cache==0.13.1
 Flask-Gravatar==0.4.1
 Flask-Login==0.2.10
 Flask-Mail==0.9.0
+Flask-Menu==0.4.0
 Flask-Principal==0.4.0
 Flask-RESTful==0.2.12
 Flask-SSLify==0.1.4
