--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
 -e git+https://github.com/ahupp/python-magic.git@a818eda7e3e163d6179f9a6a381856ffb00722ac#egg=python_magic-master
+amqp==1.4.6
+aniso8601==0.82
+anyjson==0.3.3
+awesome-slugify==1.2.1
 Babel==1.3
+billiard==3.3.0.19
+blinker==1.3
+cachetools==0.4.0
+celery==3.1.10
 Fabric==1.8.3
 Flask-Admin==1.1.0
 Flask-Assets==0.9
@@ -9,33 +17,22 @@ Flask-Gravatar==0.4.1
 Flask-Login==0.2.10
 Flask-Mail==0.9.0
 Flask-Menu==0.4.0
+flask-mongoengine==0.7.1
 Flask-Principal==0.4.0
 Flask-RESTful==0.2.12
-Flask-SSLify==0.1.4
 Flask-Script==0.6.7
 Flask-Security==1.7.1
+Flask-SSLify==0.1.4
+Flask-Testing==0.4.2
 Flask-WTF==0.11
 Flask==0.10.1
-Jinja2==2.7.3
-MarkupSafe==0.23
-Parsley==1.2
-Unidecode==0.04.14
-WTForms==2.0.2
-Werkzeug==0.10.4
-amqp==1.4.6
-aniso8601==0.82
-anyjson==0.3.3
-awesome-slugify==1.2.1
-billiard==3.3.0.19
-blinker==1.3
-cachetools==0.4.0
-celery==3.1.10
-flask-mongoengine==0.7.1
 gevent==1.0.1
 honcho==0.5.0
 itsdangerous==0.24
+Jinja2==2.7.3
 kombu==3.0.24
 lxml==3.3.5
+MarkupSafe==0.23
 mongoengine==0.9.0
 networkx==1.8.1
 nose==1.3.0
@@ -43,6 +40,7 @@ numexpr==2.4
 numpy==1.8.0
 pandas==0.13.1
 parsimonious==0.5
+Parsley==1.2
 passlib==1.6.2
 pymongo==2.8
 python-dateutil==2.2
@@ -52,8 +50,11 @@ redis==2.9.1
 requests==2.6.0
 six==1.6.1
 tablib==0.9.11
-uWSGI==2.0.10
 unicodecsv==0.9.4
+Unidecode==0.04.14
+uWSGI==2.0.10
 webassets==0.9
+Werkzeug==0.10.4
 wsgiref==0.1.2
+WTForms==2.0.2
 xlrd==0.9.2
