Revert "Merged in jamafuta/apollo/feature/odk-submission-view-tests (pull request #6)"
This reverts commit 521ccb95e433aa88343c006c62375098a519179d, reversing
changes made to 3ee0cf0b4f07d81964fe2062586776c8a7df82c8.

--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ Flask-RESTful==0.2.12
 Flask-Script==0.6.7
 Flask-Security==1.7.1
 Flask-SSLify==0.1.4
+Flask-Testing==0.4.2
 Flask-WTF==0.11
 Flask==0.10.1
 gevent==1.0.1
