do not attempt to remove containers manually or it will fail

--- a/circle.yml
+++ b/circle.yml
@@ -11,6 +11,6 @@ test:
   override:
     - docker run -d --name redis redis
     - docker run -d --name mongodb mongo
-    - docker run -it --rm -e SECRET_KEY=notasecret --link redis:redis --link mongodb:mongodb apollo nosetests apollo/
+    - docker run -it -e SECRET_KEY=notasecret --link redis:redis --link mongodb:mongodb apollo nosetests apollo/
 
 
