--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
--e git+https://github.com/ahupp/python-magic.git@a818eda7e3e163d6179f9a6a381856ffb00722ac#egg=python_magic-master
 amqp==1.4.9
 aniso8601==0.82
 anyjson==0.3.3
@@ -35,15 +34,15 @@ lxml==3.3.5
 MarkupSafe==0.23
 mongoengine==0.9.0
 networkx==1.8.1
-nose==1.3.0
-numexpr==2.4
-numpy==1.10.4
+nose==1.3.7
+numpy==1.11.1
 pandas==0.17.1
 parsimonious==0.5
 Parsley==1.2
 passlib==1.6.2
 pymongo==2.8
 python-dateutil==2.4.2
+python-magic==0.4.12
 pytz==2015.7
 raven==4.2.3
 redis==2.9.1
@@ -52,7 +51,7 @@ six==1.10.0
 tablib==0.9.11
 unicodecsv==0.9.4
 Unidecode==0.04.14
-uWSGI==2.0.10
+uWSGI==2.0.13
 webassets==0.9
 Werkzeug==0.10.4
 wsgiref==0.1.2
