--- a/Pipfile
+++ b/Pipfile
@@ -22,6 +22,7 @@ flask-assets = "==0.9"
 flask-babel = "==0.9"
 flask-cache = "==0.13.1"
 flask-gravatar = "==0.5.0"
+flask-httpauth = "==2.7.0"
 flask-login = "==0.2.10"
 flask-mail = "==0.9.0"
 flask-menu = "==0.4.0"
@@ -56,6 +57,7 @@ pytz = "==2015.7"
 raven = "==4.2.3"
 redis = "==2.9.1"
 requests = "==2.6.0"
+six = "==1.10.0"
 tablib = "==0.12.1"
 unidecode = "==0.04.14"
 uwsgi = "==2.0.13"
@@ -63,8 +65,9 @@ webassets = "==0.9"
 werkzeug = "==0.10.4"
 wtforms = "==2.1"
 xlrd = "==0.9.2"
-flask-httpauth = "==2.7.0"
-six = "==1.10.0"
+flask-sqlalchemy = "==2.3.2"
+"psycopg2" = "==2.7.3.2"
+sqlalchemy = "==1.2.1"
 
 
 [dev-packages]
