--- a/Pipfile
+++ b/Pipfile
@@ -68,6 +68,7 @@ xlrd = "==0.9.2"
 flask-sqlalchemy = "==2.3.2"
 "psycopg2" = "==2.7.3.2"
 sqlalchemy = "==1.2.1"
+prettyconf = "==1.2.3"
 
 
 [dev-packages]
