--- a/Pipfile
+++ b/Pipfile
@@ -10,9 +10,9 @@ name = "pypi"
 amqp = "==1.4.9"
 "aniso8601" = "==0.82"
 anyjson = "==0.3.3"
-awesome-slugify = "==1.2.1"
+awesome-slugify = "==1.6.5"
 billiard = "==3.3.0.22"
-blinker = "==1.3"
+blinker = "==1.4"
 cachetools = "==1.1.5"
 celery = "==3.1.20"
 fabric = "==1.8.3"
@@ -29,15 +29,14 @@ flask-sslify = "==0.1.4"
 flask-testing = "==0.4.2"
 flask = "==0.12.2"
 gevent = "==1.2.2"
-honcho = "==0.5.0"
+honcho = "==1.0.1"
 itsdangerous = "==0.24"
-"jinja2" = "==2.7.3"
+"jinja2" = "==2.10"
 kombu = "==3.0.33"
 lxml = "==3.3.5"
-markupsafe = "==0.23"
+markupsafe = "==1.0"
 mongoengine = "==0.9.0"
 networkx = "==1.8.1"
-nose = "==1.3.7"
 numpy = "==1.14.0"
 pandas = "==0.22.0"
 parsimonious = "==0.5"
@@ -51,7 +50,7 @@ redis = "==2.9.1"
 requests = "==2.6.0"
 six = "==1.10.0"
 tablib = "==0.12.1"
-unidecode = "==0.04.14"
+unidecode = "==0.4.21"
 uwsgi = "==2.0.13"
 webassets = "==0.12.1"
 werkzeug = "==0.14.1"
@@ -76,10 +75,13 @@ flask-babelex = "==0.9.3"
 flask-principal = "==0.4.0"
 flask-wtf = "==0.14.2"
 passlib = "==1.7.1"
+regex = "==2018.2.3"
+boltons = "==17.2.0"
 
 
 [dev-packages]
 
+nose = "==1.3.7"
 
 
 [requires]
