--- a/Pipfile
+++ b/Pipfile
@@ -16,22 +16,22 @@ blinker = "==1.4"
 cachetools = "==1.1.5"
 celery = "==3.1.20"
 fabric = "==1.8.3"
-Flask-Admin = "==1.4.0"
-Flask-Assets = "==0.12"
-Flask-Gravatar = "==0.5.0"
+flask-admin = "==1.4.0"
+flask-assets = "==0.12"
+flask-gravatar = "==0.5.0"
 flask-httpauth = "==2.7.0"
-Flask-Mail = "==0.9.1"
-Flask-Menu = "==0.4.0"
+flask-mail = "==0.9.1"
+flask-menu = "==0.4.0"
 flask-mongoengine = "==0.9.3"
-Flask-RESTful = "==0.3.6"
+flask-restful = "==0.3.6"
 flask-script = "==2.0.3"
-Flask-SSLify = "==0.1.4"
-Flask-Testing = "==0.4.2"
-Flask = "==0.12.2"
+flask-sslify = "==0.1.4"
+flask-testing = "==0.4.2"
+flask = "==0.12.2"
 gevent = "==1.2.2"
 honcho = "==1.0.1"
 itsdangerous = "==0.24"
-"Jinja2" = "==2.10"
+"jinja2" = "==2.10"
 kombu = "==3.0.33"
 lxml = "==3.3.5"
 markupsafe = "==1.0"
@@ -40,7 +40,7 @@ networkx = "==1.8.1"
 numpy = "==1.14.0"
 pandas = "==0.22.0"
 parsimonious = "==0.5"
-Parsley = "==1.3"
+parsley = "==1.3"
 pymongo = "==2.8"
 python-dateutil = "==2.4.2"
 python-magic = "==0.4.12"
@@ -50,33 +50,34 @@ redis = "==2.9.1"
 requests = "==2.6.0"
 six = "==1.10.0"
 tablib = "==0.12.1"
-Unidecode = "==0.4.21"
-uWSGI = "==2.0.13"
+unidecode = "==0.4.21"
+uwsgi = "==2.0.13"
 webassets = "==0.12.1"
 werkzeug = "==0.14.1"
 wtforms = "==2.1"
 xlrd = "==0.9.2"
-Flask-SQLAlchemy = "==2.3.2"
+flask-sqlalchemy = "==2.3.2"
 "psycopg2" = "==2.7.3.2"
 sqlalchemy = "==1.2.2"
 prettyconf = "==1.2.3"
-SQLAlchemy-Utils = "==0.32.21"
+sqlalchemy-utils = "==0.32.21"
 alembic = "==0.9.7"
 flask-migrate = "==2.1.1"
 mako = "==1.0.7"
 python-editor = "==1.0.3"
 whitenoise = "==3.3.1"
 gunicorn = "==19.7.1"
-Flask-Caching = "==1.3.3"
-Flask-Security = "==3.0.0"
-Babel = "==2.5.3"
-Flask-Login = "==0.4.1"
+flask-caching = "==1.3.3"
+flask-security = "==3.0.0"
+babel = "==2.5.3"
+flask-login = "==0.4.1"
 flask-babelex = "==0.9.3"
-Flask-Principal = "==0.4.0"
-Flask-WTF = "==0.14.2"
+flask-principal = "==0.4.0"
+flask-wtf = "==0.14.2"
 passlib = "==1.7.1"
 regex = "==2018.2.3"
 boltons = "==17.2.0"
+flask-uploads = "==0.2.1"
 
 
 [dev-packages]
