--- a/.dockerignore
+++ b/.dockerignore
@@ -1,13 +1,14 @@
-*.pyc
-*.sublime-project
-*.sublime-workspace
-.DS_Store
-.env*
 .git
 .gitignore
 .Python
-.tx
-.webassets-cache
+.tx/
+.vscode/
+*.sublime-project
+*.sublime-workspace
+**/.DS_Store
+**/.env*
+**/.webassets-cache
+**/*.pyc
 apollo-*.tar.gz
 bin/
 include/
