--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,4 @@
+.dockerignore
 .git
 .gitignore
 .Python
@@ -13,6 +14,7 @@ apollo-*.tar.gz
 bin/
 circle.yml
 docker-compose.yml
+Dockerfile
 gunicorn.pid
 include/
 lib/
