--- a/Pipfile
+++ b/Pipfile
@@ -7,76 +7,74 @@ name = "pypi"
 
 [packages]
 
-amqp = "==1.4.9"
 "aniso8601" = "==0.82"
+"jinja2" = "==2.10"
+"psycopg2" = "==2.7.4"
+alembic = "==0.9.8"
+amqp = "==1.4.9"
 anyjson = "==0.3.3"
 awesome-slugify = "==1.6.5"
+babel = "==2.5.3"
 billiard = "==3.3.0.22"
 blinker = "==1.4"
+boltons = "==17.2.0"
 cachetools = "==1.1.5"
 celery = "==3.1.20"
-fabric = "==1.8.3"
+flask = "==0.12.2"
 flask-admin = "==1.5.0"
 flask-assets = "==0.12"
+flask-babelex = "==0.9.3"
+flask-caching = "==1.3.3"
 flask-gravatar = "==0.5.0"
 flask-httpauth = "==2.7.0"
+flask-login = "==0.4.1"
 flask-mail = "==0.9.1"
 flask-menu = "==0.7.0"
-flask-mongoengine = "==0.9.3"
+flask-migrate = "==2.1.1"
+flask-principal = "==0.4.0"
 flask-restful = "==0.3.6"
 flask-script = "==2.0.6"
+flask-security = "==3.0.0"
+flask-sqlalchemy = "==2.3.2"
 flask-sslify = "==0.1.4"
 flask-testing = "==0.4.2"
-flask = "==0.12.2"
+flask-uploads = "==0.2.1"
+flask-wtf = "==0.14.2"
 gevent = "==1.2.2"
+gunicorn = "==19.7.1"
 honcho = "==1.0.1"
 itsdangerous = "==0.24"
-"jinja2" = "==2.10"
 kombu = "==3.0.33"
-lxml = "==3.3.5"
+lxml = "==4.1.1"
+mako = "==1.0.7"
 markupsafe = "==1.0"
-mongoengine = "==0.9.0"
-networkx = "==1.8.1"
+networkx = "==2.1"
 numpy = "==1.14.0"
+openpyxl = "==2.5.0"
 pandas = "==0.22.0"
-parsimonious = "==0.5"
+parsimonious = "==0.8.0"
 parsley = "==1.3"
-pymongo = "==2.8"
+passlib = "==1.7.1"
+prettyconf = "==1.2.3"
 python-dateutil = "==2.4.2"
-python-magic = "==0.4.12"
+python-editor = "==1.0.3"
+python-magic = "==0.4.15"
 pytz = "==2015.7"
 raven = "==6.5.0"
-redis = "==2.9.1"
+redis = "==2.10.6"
+regex = "==2018.2.3"
 requests = "==2.6.0"
-six = "==1.10.0"
+six = "==1.11.0"
+sqlalchemy = "==1.2.3"
+sqlalchemy-utils = "==0.33.0"
 tablib = "==0.12.1"
 unidecode = "==0.4.21"
 webassets = "==0.12.1"
 werkzeug = "==0.14.1"
-wtforms = "==2.1"
-xlrd = "==0.9.2"
-flask-sqlalchemy = "==2.3.2"
-"psycopg2" = "==2.7.3.2"
-sqlalchemy = "==1.2.2"
-prettyconf = "==1.2.3"
-sqlalchemy-utils = "==0.32.21"
-alembic = "==0.9.7"
-flask-migrate = "==2.1.1"
-mako = "==1.0.7"
-python-editor = "==1.0.3"
 whitenoise = "==3.3.1"
-gunicorn = "==19.7.1"
-flask-caching = "==1.3.3"
-flask-security = "==3.0.0"
-babel = "==2.5.3"
-flask-login = "==0.4.1"
-flask-babelex = "==0.9.3"
-flask-principal = "==0.4.0"
-flask-wtf = "==0.14.2"
-passlib = "==1.7.1"
-regex = "==2018.2.3"
-boltons = "==17.2.0"
-flask-uploads = "==0.2.1"
+wtforms = "==2.1"
+xlrd = "==1.1.0"
+xlwt = "==1.3.0"
 
 
 [dev-packages]
