--- a/circle.yml
+++ b/circle.yml
@@ -5,12 +5,11 @@ machine:
 dependencies:
   override:
     - docker info
-    - docker build -t apollo .
+    - docker build -t apollo .:
+        timeout: 1200
 
 test:
   override:
-    - docker run -d --name redis redis
-    - docker run -d --name mongodb mongo
+    - docker run -d --name redis redis:4.0
+    - docker run -d --name mongodb mongo:3.2
     - docker run -it -e SECRET_KEY=notasecret --link redis:redis --link mongodb:mongodb apollo nosetests apollo/
-
-
