--- a/Pipfile
+++ b/Pipfile
@@ -21,10 +21,10 @@ boltons = "==17.2.0"
 cachetools = "==1.1.5"
 celery = "==3.1.20"
 flask = "==0.12.2"
-flask-admin = "==1.5.0"
+Flask-Admin = "==1.5.0"
 flask-assets = "==0.12"
 flask-babelex = "==0.9.3"
-flask-caching = "==1.3.3"
+Flask-Caching = "==1.3.3"
 flask-gravatar = "==0.5.0"
 flask-httpauth = "==2.7.0"
 flask-login = "==0.4.1"
@@ -75,7 +75,6 @@ whitenoise = "==3.3.1"
 wtforms = "==2.1"
 xlrd = "==1.1.0"
 xlwt = "==1.3.0"
-"geoalchemy2" = "==0.4.2"
 
 
 [dev-packages]
