--- a/Pipfile
+++ b/Pipfile
@@ -11,20 +11,17 @@ name = "pypi"
 "jinja2" = "==2.10"
 "psycopg2" = "==2.7.4"
 alembic = "==0.9.8"
-amqp = "==1.4.9"
 anyjson = "==0.3.3"
 awesome-slugify = "==1.6.5"
 babel = "==2.5.3"
-billiard = "==3.3.0.22"
 blinker = "==1.4"
 boltons = "==17.2.0"
 cachetools = "==1.1.5"
-celery = "==3.1.20"
 flask = "==0.12.2"
-Flask-Admin = "==1.5.0"
+flask-admin = "==1.5.0"
 flask-assets = "==0.12"
 flask-babelex = "==0.9.3"
-Flask-Caching = "==1.3.3"
+flask-caching = "==1.3.3"
 flask-gravatar = "==0.5.0"
 flask-httpauth = "==2.7.0"
 flask-login = "==0.4.1"
@@ -44,7 +41,6 @@ gevent = "==1.2.2"
 gunicorn = "==19.7.1"
 honcho = "==1.0.1"
 itsdangerous = "==0.24"
-kombu = "==3.0.33"
 lxml = "==4.1.1"
 mako = "==1.0.7"
 markupsafe = "==1.0"
@@ -59,9 +55,7 @@ prettyconf = "==1.2.3"
 python-dateutil = "==2.4.2"
 python-editor = "==1.0.3"
 python-magic = "==0.4.15"
-pytz = "==2015.7"
 raven = "==6.5.0"
-redis = "==2.10.6"
 regex = "==2018.2.3"
 requests = "==2.6.0"
 six = "==1.11.0"
@@ -75,6 +69,7 @@ whitenoise = "==3.3.1"
 wtforms = "==2.1"
 xlrd = "==1.1.0"
 xlwt = "==1.3.0"
+celery = {extras = ["redis"]}
 
 
 [dev-packages]
