--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,7 @@ babel = "==2.5.3"
 blinker = "==1.4"
 boltons = "==17.2.0"
 cachetools = "==1.1.5"
+celery = {extras = ["redis"]}
 flask = "==0.12.2"
 flask-admin = "==1.5.0"
 flask-assets = "==0.12"
@@ -26,7 +27,7 @@ flask-gravatar = "==0.5.0"
 flask-httpauth = "==2.7.0"
 flask-login = "==0.4.1"
 flask-mail = "==0.9.1"
-flask-menu = "==0.7.0"
+flask-menu = "*"
 flask-migrate = "==2.1.1"
 flask-principal = "==0.4.0"
 flask-restful = "==0.3.6"
@@ -67,18 +68,17 @@ webassets = "==0.12.1"
 werkzeug = "==0.14.1"
 whitenoise = "==3.3.1"
 wtforms = "==2.1"
+wtforms-alchemy = "==0.16.6"
 xlrd = "==1.1.0"
 xlwt = "==1.3.0"
-celery = {extras = ["redis"]}
-wtforms-alchemy = "==0.16.6"
 
 
 [dev-packages]
 
-nose = "==1.3.7"
-flask-debugtoolbar = "==0.10.1"
-"flake8" = "*"
 "autopep8" = "*"
+"flake8" = "*"
+flask-debugtoolbar = "==0.10.1"
+nose = "==1.3.7"
 
 
 [requires]
