--- a/Pipfile
+++ b/Pipfile
@@ -17,7 +17,7 @@ babel = "==2.5.3"
 blinker = "==1.4"
 boltons = "==17.2.0"
 cachetools = "==1.1.5"
-celery = {extras = ["redis"]}
+celery = {version = ">=4.0.0,<4.1.0", extras = ["redis"]}
 flask = "==0.12.2"
 flask-admin = "==1.5.0"
 flask-assets = "==0.12"
