--- a/Pipfile
+++ b/Pipfile
@@ -15,11 +15,10 @@ anyjson = "==0.3.3"
 awesome-slugify = "==1.6.5"
 babel = "==2.5.3"
 blinker = "==1.4"
-boltons = "==17.2.0"
 cachetools = "==1.1.5"
 celery = {version = ">=4.0.0,<4.1.0", extras = ["redis"]}
 flask = "==0.12.2"
-flask-admin = "==1.5.0"
+flask-admin = "==1.5.1"
 flask-assets = "==0.12"
 flask-babelex = "==0.9.3"
 flask-caching = "==1.3.3"
@@ -60,7 +59,7 @@ raven = "==6.5.0"
 regex = "==2018.2.3"
 requests = "==2.6.0"
 six = "==1.11.0"
-sqlalchemy = "==1.1.17"
+sqlalchemy = "==1.2.5"
 sqlalchemy-utils = "==0.33.0"
 tablib = "==0.12.1"
 unidecode = "==0.4.21"
@@ -80,6 +79,8 @@ pyxform = "==0.10.0"
 "flake8" = "*"
 flask-debugtoolbar = "==0.10.1"
 nose = "==1.3.7"
+flask-testing = "==0.7.1"
+pytest = "==3.4.2"
 
 
 [requires]
