--- a/Pipfile
+++ b/Pipfile
@@ -13,7 +13,7 @@ awesome-slugify = "==1.6.5"
 babel = "==2.5.3"
 blinker = "==1.4"
 cachetools = "==1.1.5"
-celery = {version = ">=4.0.0,<4.1.0", extras = ["redis"]}
+celery = "==4.1.1"
 flask = "==0.12.2"
 flask-admin = "==1.5.1"
 flask-assets = "==0.12"
@@ -73,6 +73,7 @@ pytz = "==2018.4"
 prometheus-client = "*"
 netifaces = "*"
 psutil = "*"
+redis = "==2.10.6"
 
 [dev-packages]
 "autopep8" = "*"
