fix: updated testing configuration parameters so tests can run again

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,21 +5,22 @@ jobs:
     docker:
       - image: circleci/python:3.6.4
         environment:
-          - DATABASE_PASSWORD: notapassword
+          - TEST_DATABASE_HOSTNAME: localhost
+          - TEST_DATABASE_USERNAME: postgres
+          - TEST_DATABASE_PASSWORD: notapassword
           - SECRET_KEY: notasecret
-          - REDIS_HOSTNAME: 127.0.0.1
-          - DATABASE_HOSTNAME: 127.0.0.1
+          - REDIS_HOSTNAME: localhost
 
       - image: circleci/postgres:10-alpine-ram
         environment:
-          - POSTGRES_USER: postgres
           - POSTGRES_DB: apollo
+          - POSTGRES_USER: postgres
           - POSTGRES_PASSWORD: notapassword
 
       - image: circleci/redis:4-alpine
+
     steps:
       - checkout
       - run: sudo pip install -U pipenv
-      - run: pipenv install -d
-      - run: pipenv run ./manage.py db upgrade
+      - run: pipenv sync -d
       - run: pipenv run nosetests apollo/
