--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,5 @@ jobs:
 
     steps:
       - checkout
-      - run: sudo pip install -U pipenv
-      - run: pipenv sync -d
-      - run: pipenv run nosetests apollo/
+      - run: pip install -r requirements/prod.txt
+      - run: nosetests apollo/
