Chore: change package manager (#368)
* chore: change package management system from pipenv to pip

* chore: redact from ignore files

* fix: use dev dependencies, and install as root

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,5 @@ jobs:
 
     steps:
       - checkout
-      - run: sudo pip install -U pipenv
-      - run: pipenv sync -d
-      - run: pipenv run nosetests apollo/
+      - run: sudo pip install -r requirements/dev.txt
+      - run: nosetests apollo/
